--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Libre+Franklin:wght@400;700&family=Pacifico&family=Playfair+Display:ital@1&family=Poppins:wght@400;700&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-:root{
+:root {
   --lato: 'Lato', sans-serif;
-  --libre:'Libre Franklin', sans-serif;
-  --pacifico:'Pacifico', cursive;
+  --libre: 'Libre Franklin', sans-serif;
+  --pacifico: 'Pacifico', cursive;
   --playfair: 'Playfair Display', serif;
   --poppins: 'Poppins', sans-serif;
 }
 
-.line{
+.line {
   width: 1px;
   height: 38px;
   background: black;
   display: flex;
 }
 
-.header__link{
+.header__link {
   font-family: var(--poppins);
   font-size: 12px;
   color: #6C6C6C;
 }
 
-.header__link_color-black{
+.header__link_color-black {
   color: black;
 }
 
-.font-size-68{
+.font-size-68 {
   font-size: 68px;
 }
-.font-size-43{
+
+.font-size-43 {
   font-size: 43px;
 }
-.font-size-12{
+
+.font-size-12 {
   font-size: 12px;
 }
 
-.popins{
+.popins {
   font-family: var(--poppins);
 }
-.libre{
+
+.libre {
   font-family: var(--libre);
 }
-.lato{
+
+.lato {
   font-family: var(--lato);
 }
-.pacifico{
+
+.pacifico {
   font-family: var(--pacifico);
 }
-.playfair{
+
+.playfair {
   font-family: var(--playfair);
 }
 
-.murod{
+.murod {
   height: 100vh;
   background-image: url(../img/bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.ponpeo {
+  text-align: center;
+}
+
+.ponpe {
+  display: flex;
+  text-align: center;
+}
+
+.shuxrat12 {
+  height: 220px;
+  width: 550px;
+  background-image: url(../img/begraund.png);
+  padding-top: 200px;  
+  background-repeat: no-repeat; 
+  padding-top: 144px;
+  padding-bottom: 144px;
+}
+
+
+.quis{
+  padding-top: 200px;
 }
