https://github.com/murodjon90/ponpeo.git
Signed-off-by: Shuxrat80836 <113896839+Shuxrat80836@users.noreply.github.com>

--- a/css/style.css
+++ b/css/style.css
@@ -84,13 +84,88 @@
   height: 220px;
   width: 550px;
   background-image: url(../img/begraund.png);
-  padding-top: 200px;  
-  background-repeat: no-repeat; 
+  padding-top: 200px;
+  background-repeat: no-repeat;
   padding-top: 144px;
   padding-bottom: 144px;
 }
 
 
-.quis{
+.quis {
   padding-top: 200px;
+}
+
+.koza {
+  margin-left: 240px;
+}
+
+.line1 {
+  width: 371px;
+  height: 1px;
+  background: #DBDBDB;
+  display: flex;
+}
+
+.koza3 {
+  width: 195px;
+  height: 62px;
+  border-radius: 0px;
+  padding-top: 20px;
+}
+
+.koza4 {
+  margin-left: 520px;
+}
+
+.intro {
+  margin-top: 120px;
+  height: 470px;
+  background: url(../img/imgg.png);
+}
+
+.intro1 {
+  padding: 20px;
+  padding-left: 122px;
+  padding-top: 200px;
+  display: flex;
+}
+
+.intro2 {
+  width: 195px;
+  height: 62px;
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+}
+
+.intro3 {
+  color: #dc3545;
+  background: 0;
+}
+
+.intr {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.intro-footer {
+  border-radius: 0;
+  width: 470px;
+  height: 45px;
+}
+
+.intro4 {
+  width: 320px;
+  height: 45px;
+}
+
+.box{
+  position: absolute;
+width: 13px;
+height: 13px;
+left: calc(50% - 13px/2 - 85.5px);
+top: 1.95px;
 }
