--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,28 @@
 }
 
 
-.intro9 {
+
+
+
+.introd{
+
   gap: 10px;
+}
+
+.intro8{
+  --bs-gutter-x: 0;
+}
+
+.qwerty{
+  margin-left: 541px;
+}
+
+.qwer{
+  margin-left:  10px;
+}
+
+.index{
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
